@@ -34,7 +34,7 @@
 #endif
 
 #include <clogs/visibility_push.h>
-#include <CL/cl.hpp>
+#include "clhpp11.h"
 #include <cstddef>
 #include <map>
 #include <string>
