@@ -23,6 +23,7 @@
 # define __CL_ENABLE_EXCEPTIONS
 #endif
 
+#include "../src/clhpp11.h"
 #include <clogs/clogs.h>
 #include <boost/program_options.hpp>
 #include <iostream>
